@@ -1,5 +1,6 @@
 
 5.2a3 -> 5.2a4:
+    - jbj: yarn: wire up urlFini, eliminate XurlFree.
     - jbj: yarn: wire up fdFini, eliminate XfdFree.
     - jbj: url: fix: u->use clobbers the lock from the pool.
     - jbj: rpmds: fix: rpmdsDup needs to go through rpmdsGetPool() too.
